log

vi., 11 de mar. de 2022 16:33:09: 
 exercises.c | 19 ++++++++++++++++---
 1 file changed, 16 insertions(+), 3 deletions(-)
In file included from test.c:5:0:
exercises.c: In function 'suma':
exercises.c:17:13: error: format '%d' expects argument of type 'int', but argument 2 has type 'int *' [-Werror=format=]
    printf("%d",c);
             ^
exercises.c: In function 'sumaNultimos':
exercises.c:47:4: error: expected expression before 'int'
    int j ;
    ^~~
exercises.c:48:9: error: 'j' undeclared (first use in this function)
    for (j = (m-n); j < n; j++)
         ^
exercises.c:48:9: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
40ad0c8
vi., 11 de mar. de 2022 16:34:16: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:46:4: error: expected expression before 'int'
    int j ;
    ^~~
exercises.c:47:9: error: 'j' undeclared (first use in this function)
    for (j = (m-n); j < n; j++)
         ^
exercises.c:47:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
62ffb58
vi., 11 de mar. de 2022 16:34:55: 
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:46:4: error: expected expression before 'int'
    int j ;
    ^~~
exercises.c:47:9: error: 'j' undeclared (first use in this function)
    for (j = (m-n); j < n; j++)
         ^
exercises.c:47:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
9cec9a2
vi., 11 de mar. de 2022 16:35:12: 
 exercises.c | 5 -----
 1 file changed, 5 deletions(-)
 tests:  1|6
total_score: 10/70
1f23787
vi., 11 de mar. de 2022 17:01:29: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:46:16: error: passing argument 1 of 'sumaN' makes pointer from integer without a cast [-Werror=int-conversion]
    *suma=sumaN(a[j], n);
                ^
exercises.c:25:8: note: expected 'int *' but argument is of type 'int'
    int sumaN(int a[], int N) {
        ^~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
860e872
vi., 11 de mar. de 2022 17:01:55: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:46:16: error: invalid type argument of unary '*' (have 'int')
    *suma=sumaN(*a[j], n);
                ^~~~~
Compilation failed
21494bb
vi., 11 de mar. de 2022 17:02:13: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|6
total_score: 10/70
40f0327
vi., 11 de mar. de 2022 17:37:09: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:0:
exercises.c: In function 'sumaNultimos':
exercises.c:45:8: error: unused variable 'j' [-Werror=unused-variable]
    int j=n-m;
        ^
cc1.exe: all warnings being treated as errors
Compilation failed
950d5fb
vi., 11 de mar. de 2022 17:37:25: 
 exercises.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|6
total_score: 10/70
07ee281
vi., 11 de mar. de 2022 17:38:26: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
f7a6303
